--- a/Firebase.Invites/nuget/Xamarin.Firebase.iOS.Invites.nuspec
+++ b/Firebase.Invites/nuget/Xamarin.Firebase.iOS.Invites.nuspec
@@ -23,5 +23,6 @@
 
     <!-- Add targets file for external native reference download -->
     <file src="source/Firebase.Invites/Firebase.Invites.targets" target="build/Xamarin.Firebase.iOS.Invites.targets"  />
+    <file src="External-Dependency-Info" target="THIRD-PARTY-NOTICES" />
   </files>
 </package>
