--- a/Firebase.Storage/externals/Podfile
+++ b/Firebase.Storage/externals/Podfile
@@ -1,25 +1,30 @@
 =begin
 Last run FirebaseStorage installed:
-- FirebaseAnalytics (3.4.2)
+- FirebaseAnalytics (3.6.0)
+- FirebaseCore (3.4.5)
 - FirebaseInstanceID (1.0.8)
-- FirebaseStorage (1.0.4)
-- GoogleIPhoneUtilities (1.2.1)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseStorage (1.0.5)
+- GTMSessionFetcher (1.1.7)
+- GoogleInterchangeUtilities (1.2.2)
+- GoogleSymbolUtilities (1.1.2)
+- GoogleToolboxForMac (2.1.0)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Firebase.Storage binding, you can find:
-- FirebaseStorage (1.0.4)
+- FirebaseStorage (1.0.5)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (3.4.2)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleUtilities (1.3.1)
+- FirebaseAnalytics (3.6.0)
+- GoogleSymbolUtilities (1.1.2)
+
+In .targets file, located in Firebase.Core binding, you can find:
+- FirebaseCore (3.4.5)
+- GoogleToolboxForMac (2.1.0)
+- GTMSessionFetcher (1.1.7)
+- GoogleInterchangeUtilities (1.2.2)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
 - FirebaseInstanceID (1.0.8)
@@ -31,5 +36,5 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseStorage' do
-	pod 'FirebaseStorage', '1.0.4'
+	pod 'Firebase/Storage', '3.10.0'
 end
