--- a/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.targets
+++ b/Firebase.InstanceID/source/Firebase.InstanceID/Firebase.InstanceID.targets
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseInstanceIDAssemblyName>Firebase.InstanceID, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseInstanceIDAssemblyName>
-		<_FirebaseInstanceIDItemsFolder>FInstncID-1.0.8</_FirebaseInstanceIDItemsFolder>
+		<_FirebaseInstanceIDItemsFolder>FInstncID-1.0.9</_FirebaseInstanceIDItemsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseInstanceIDItemsFolder)">
-			<Url>https://www.gstatic.com/cpdc/18da95d517c54d0f/FirebaseInstanceID-1.0.8.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/08137ea3a93f1b39/FirebaseInstanceID-1.0.9.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseInstanceIDItems" />
@@ -14,7 +14,7 @@
 	<Target Name="_FirebaseInstanceIDItems">
 
 		<PropertyGroup>
-			<_FirebaseInstanceIDSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseInstanceIDItemsFolder)\Frameworks\frameworks\</_FirebaseInstanceIDSDKBaseFolder>
+			<_FirebaseInstanceIDSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseInstanceIDItemsFolder)\Frameworks\</_FirebaseInstanceIDSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
