--- a/Google.PlayGames/component/component.yaml
+++ b/Google.PlayGames/component/component.yaml
@@ -4,48 +4,48 @@ id: googleiosplaygames
 publisher: Xamarin Inc.
 publisher-url: http://xamarin.com
 src-url: https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.PlayGames
-summary: "Find, retain, and match players for your mobile games."
+summary: Find, retain, and match players for your mobile games.
 icons:
-  - ../../icons/googleiosplaygames_128x128.png
-  - ../../icons/googleiosplaygames_512x512.png
+- ../../icons/googleiosplaygames_128x128.png
+- ../../icons/googleiosplaygames_512x512.png
 docs-url: https://developers.google.com/games/services/
 libraries:
-  ios-unified: 
-    - ../output/Google.PlayGames.dll
-    - ../../Google.Core/output/Google.Core.dll
-    - ../../Google.SignIn/output/Google.SignIn.dll
-    - ../../Firebase.Analytics/output/Firebase.Analytics.dll
-    - ../../Firebase.Core/output/Firebase.Core.dll
-    - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
+  ios-unified:
+  - ../output/Google.PlayGames.dll
+  - ../../Google.Core/output/Google.Core.dll
+  - ../../Google.SignIn/output/Google.SignIn.dll
+  - ../../Firebase.Analytics/output/Firebase.Analytics.dll
+  - ../../Firebase.Core/output/Firebase.Core.dll
+  - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
 is_shell: true
 packages:
   ios-unified:
-    - Xamarin.Google.iOS.PlayGames, Version=5.1.1.7
+  - Xamarin.Google.iOS.PlayGames, Version=5.1.1.7
 samples:
-  - name: "Collect All The Stars"
-    path:  ../samples/CollectAllTheStars/CollectAllTheStars.sln
-    removeProjects: 
-      - Google.Core
-      - Google.SignIn
-      - Google.PlayGames
-      - Firebase.Analytics
-      - Firebase.Core
-      - Firebase.InstanceID
-    installNuGets:
-      - project: CollectAllTheStars
-        packages:
-          - Xamarin.Google.iOS.Core
-          - Xamarin.Google.iOS.SignIn
-          - Xamarin.Google.iOS.PlayGames
-          - Xamarin.Firebase.iOS.Analytics
-          - Xamarin.Firebase.iOS.Core
-          - Xamarin.Firebase.iOS.InstanceID
-    removeNodes:
-      - "//xNS:Import[contains (@Project, 'Google.PlayGames.targets')]"
-      - "//xNS:Import[contains (@Project, 'Google.Core.targets')]"
-      - "//xNS:Import[contains (@Project, 'Google.SignIn.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.Core.targets')]"
-      - "//xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]"
+- name: Collect All The Stars
+  path: ../samples/CollectAllTheStars/CollectAllTheStars.sln
+  removeProjects:
+  - Google.Core
+  - Google.SignIn
+  - Google.PlayGames
+  - Firebase.Analytics
+  - Firebase.Core
+  - Firebase.InstanceID
+  installNuGets:
+  - project: CollectAllTheStars
+    packages:
+    - Xamarin.Google.iOS.Core
+    - Xamarin.Google.iOS.SignIn
+    - Xamarin.Google.iOS.PlayGames
+    - Xamarin.Firebase.iOS.Analytics
+    - Xamarin.Firebase.iOS.Core
+    - Xamarin.Firebase.iOS.InstanceID
+  removeNodes:
+  - //xNS:Import[contains (@Project, 'Google.PlayGames.targets')]
+  - //xNS:Import[contains (@Project, 'Google.Core.targets')]
+  - //xNS:Import[contains (@Project, 'Google.SignIn.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.Core.targets')]
+  - //xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]
 local-nuget-repo: ../../tmp-nugets
 no_build: true
