--- a/Google.PlayGames/nuget/Xamarin.Google.iOS.PlayGames.nuspec
+++ b/Google.PlayGames/nuget/Xamarin.Google.iOS.PlayGames.nuspec
@@ -1,9 +1,9 @@
-<?xml version="1.0"?>
-<package >
+﻿<?xml version="1.0" encoding="utf-8"?>
+<package>
   <metadata>
     <id>Xamarin.Google.iOS.PlayGames</id>
     <title>Google APIs Play Games iOS Library</title>
-    <version>5.1.1.6</version>
+    <version>5.1.1.7</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,12 +14,12 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosplaygames_128x128.png</iconUrl>
     <dependencies> 
       <group targetFramework="Xamarin.iOS10">
-        <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-        <dependency id="Xamarin.Google.iOS.SignIn" version="4.0.0.0"/>
-        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.3"/>
-        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.2"/>
-        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.8.1"/>
-        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0"/>
+        <dependency id="Xamarin.Build.Download" version="0.4.3" />
+        <dependency id="Xamarin.Google.iOS.SignIn" version="4.0.1.4" />
+        <dependency id="Xamarin.Google.iOS.Core" version="3.0.3.5" />
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="3.6.0.4" />
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="1.0.9.0" />
+        <dependency id="Xamarin.Firebase.iOS.Core" version="3.4.6.0" />
       </group>     
     </dependencies>
   </metadata>
@@ -27,6 +27,6 @@
     <file src="output/Google.PlayGames.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.PlayGames/Google.PlayGames.targets" target="build/Xamarin.Google.iOS.PlayGames.targets"  />
+    <file src="source/Google.PlayGames/Google.PlayGames.targets" target="build/Xamarin.Google.iOS.PlayGames.targets" />
   </files>
 </package>
