--- a/Firebase.CloudMessaging/source/Firebase.CloudMessaging/Firebase.CloudMessaging.targets
+++ b/Firebase.CloudMessaging/source/Firebase.CloudMessaging/Firebase.CloudMessaging.targets
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseCloudMessagingAssemblyName>Firebase.CloudMessaging, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCloudMessagingAssemblyName>
-		<_FirebaseCloudMessagingItemsFolder>FCldM-1.2.1</_FirebaseCloudMessagingItemsFolder>
+		<_FirebaseCloudMessagingItemsFolder>FCldM-1.2.2</_FirebaseCloudMessagingItemsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="'$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True'">
 		<XamarinBuildDownload Include="$(_FirebaseCloudMessagingItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/008160767e35e210/FirebaseMessaging-1.2.1.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/ed0bb97a26afe59a/FirebaseMessaging-1.2.2.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseCloudMessagingItems" />
@@ -14,7 +14,7 @@
 	<Target Name="_FirebaseCloudMessagingItems">
 
 		<PropertyGroup>
-			<_FirebaseCloudMessagingSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCloudMessagingItemsFolder)\Frameworks\frameworks\</_FirebaseCloudMessagingSDKBaseFolder>
+			<_FirebaseCloudMessagingSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCloudMessagingItemsFolder)\Frameworks\</_FirebaseCloudMessagingSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
