--- a/Firebase.Storage/source/Firebase.Storage/Firebase.Storage.targets
+++ b/Firebase.Storage/source/Firebase.Storage/Firebase.Storage.targets
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseStorageAssemblyName>Firebase.Storage, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseStorageAssemblyName>
-		<_FirebaseStorageItemsFolder>FStrg-1.0.5</_FirebaseStorageItemsFolder>
+		<_FirebaseStorageItemsFolder>FStrg-1.1.0</_FirebaseStorageItemsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseStorageItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/ec6783e93be66284/FirebaseStorage-1.0.5.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/f1a4af2521819d95/FirebaseStorage-1.1.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseStorageItems" />
@@ -14,7 +14,7 @@
 	<Target Name="_FirebaseStorageItems">
 
 		<PropertyGroup>
-			<_FirebaseStorageSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseStorageItemsFolder)\Frameworks\frameworks\</_FirebaseStorageSDKBaseFolder>
+			<_FirebaseStorageSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseStorageItemsFolder)\Frameworks\</_FirebaseStorageSDKBaseFolder>
 		</PropertyGroup>
 
 		<ItemGroup>
