--- a/Google.SignIn/source/Google.SignIn/Google.SignIn.targets
+++ b/Google.SignIn/source/Google.SignIn/Google.SignIn.targets
@@ -2,25 +2,25 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleSignInAssemblyName>Google.SignIn, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleSignInAssemblyName>
-		<_GoogleSignInItemsFolder>GSgnI-4.0.1</_GoogleSignInItemsFolder>
-		<_GoogleAppUtilitiesItemsFolder>GAppU-1.1.2</_GoogleAppUtilitiesItemsFolder>
+		<_GoogleSignInItemsFolder>GSgnI-4.0.2</_GoogleSignInItemsFolder>
+<!--		<_GoogleAppUtilitiesItemsFolder>GAppU-1.1.2</_GoogleAppUtilitiesItemsFolder>-->
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleSignInItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/1e9a99db415f062f/GoogleSignIn-4.0.1.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/8c8b391433bcab7b/GoogleSignIn-4.0.2.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_GoogleAppUtilitiesItemsFolder)">
+		<!--<XamarinBuildDownload Include="$(_GoogleAppUtilitiesItemsFolder)">
 			<Url>https://dl.google.com/dl/cpdc/09f214fda7470397/GoogleAppUtilities-1.1.2.tar.gz</Url>
 			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
+		</XamarinBuildDownload>-->
 		<XamarinBuildRestoreResources Include="_GoogleSignInItems" />
 	</ItemGroup>
 	<Target Name="_GoogleSignInItems">
 
 		<PropertyGroup>
 			<_GoogleSignInSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleSignInItemsFolder)\</_GoogleSignInSDKBaseFolder>
-			<_GoogleAppUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAppUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleAppUtilitiesSDKBaseFolder>
+<!--			<_GoogleAppUtilitiesSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAppUtilitiesItemsFolder)\Frameworks\frameworks\</_GoogleAppUtilitiesSDKBaseFolder>-->
 		</PropertyGroup>
 
 		<ItemGroup>
@@ -28,10 +28,10 @@
 				<LogicalName>GoogleSignIn</LogicalName>
 				<AssemblyName>$(_GoogleSignInAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_GoogleAppUtilitiesSDKBaseFolder)GoogleAppUtilities.framework\GoogleAppUtilities">
+			<!--<RestoreAssemblyResource Include="$(_GoogleAppUtilitiesSDKBaseFolder)GoogleAppUtilities.framework\GoogleAppUtilities">
 				<LogicalName>GoogleAppUtilities</LogicalName>
 				<AssemblyName>$(_GoogleSignInAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
+			</RestoreAssemblyResource>-->
 			<RestoreAssemblyResource Include="$(_GoogleSignInSDKBaseFolder)Resources\GoogleSignIn.bundle\Info.plist">
                 <LogicalName>__monotouch_content_GoogleSignIn.bundle_fInfo.plist</LogicalName>
                 <AssemblyName>$(_GoogleSignInAssemblyName)</AssemblyName>
