--- a/Firebase.Core/source/Firebase.Core/Firebase.Core.csproj
+++ b/Firebase.Core/source/Firebase.Core/Firebase.Core.csproj
@@ -37,6 +37,7 @@
       <DependentUpon>FirebaseCore</DependentUpon>
     </Compile>
     <Compile Include="Loader.cs" />
+    <Compile Include="Extension.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
