--- a/Google.TagManager/externals/Podfile
+++ b/Google.TagManager/externals/Podfile
@@ -1,12 +1,11 @@
 
 =begin
 Last run GoogleTagManager installed:
-- FirebaseAnalytics (3.2.1)
-- FirebaseInstanceID (1.0.7)
+- FirebaseAnalytics (4.0.2)
+- FirebaseCore (4.0.3)
+- FirebaseInstanceID (2.0.0)
 - GoogleAnalytics (3.17.0)
-- GoogleInterchangeUtilities (1.2.1)
-- GoogleSymbolUtilities (1.1.1)
-- GoogleTagManager (5.0.8)
+- GoogleTagManager (6.0.0)
 - GoogleUtilities (1.3.2)
 
 Check if main version or subversion number has changed. 
@@ -14,10 +13,19 @@ If yes, please, update *.targets files located in binding
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Google.TagManager binding, you can find:
-- GoogleTagManager (5.0.8)
+- GoogleTagManager (6.0.0)
 - GoogleUtilities (1.3.2)
 - GoogleSymbolUtilities (1.1.2)
 
+In .targets file, located in Firebase.Analytics binding, you can find:
+- FirebaseAnalytics (4.0.2)
+
+In .targets file, located in Firebase.Core binding, you can find:
+- FirebaseCore (4.0.3)
+- GoogleToolboxForMac (2.1.1)
+
+In .targets file, located in Firebase.InstanceID binding, you can find:
+- FirebaseInstanceID (2.0.0)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
@@ -26,5 +34,5 @@ platform :ios, '7.1'
 install! 'cocoapods', :integrate_targets => false
 
 target 'GoogleTagManager' do
-	pod 'GoogleTagManager', '5.0.8'
+	pod 'GoogleTagManager', '6.0.0'
 end
