--- a/Firebase.CloudFirestore/externals/Podfile
+++ b/Firebase.CloudFirestore/externals/Podfile
@@ -1,24 +1,47 @@
 =begin
-Last run FirebaseRemoteConfig installed:
+Last run FirebaseFirestore installed:
+- BoringSSL (9.0)
+- Firebase (4.3.0)
 - FirebaseAnalytics (4.0.4)
+- FirebaseAuth (4.3.2)
 - FirebaseCore (4.0.8)
-- FirebaseInstanceID (2.0.4)
-- FirebaseRemoteConfig (2.0.3)
+- FirebaseFirestore (0.8.0)
+- FirebaseInstanceID (2.0.6)
+- GTMSessionFetcher (1.1.12)
 - GoogleToolboxForMac (2.1.3)
+- Protobuf (3.5.0)
+- gRPC (1.6.5)
+- gRPC-Core (1.6.5)
+- gRPC-ProtoRPC (1.6.5)
+- gRPC-RxLibrary (1.6.5)
+- leveldb-library (1.20)
+- nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
-In .targets file, located in Firebase.RemoteConfig binding, you can find:
-- FirebaseRemoteConfig (2.0.3)
+In .targets file, located in Firebase.CloudFirestore binding, you can find:
+- FirebaseFirestore (0.8.0)
+- gRPC (1.6.5)
+- gRPC-Core (1.6.5)
+- gRPC-ProtoRPC (1.6.5)
+- gRPC-RxLibrary (1.6.5)
+- BoringSSL (9.0)
+
+In .targets file, located in Firebase.Auth binding, you can find:
+- FirebaseAuth (4.2.1)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
 - FirebaseAnalytics (4.0.4)
 
 In .targets file, located in Firebase.Core binding, you can find:
 - FirebaseCore (4.0.8)
+- GTMSessionFetcher (1.1.12)
 - GoogleToolboxForMac (2.1.3)
+- Protobuf (3.5.0)
+- leveldb-library (1.20)
+- nanopb (0.3.8)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
 - FirebaseInstanceID (2.0.4)
