--- a/Google.Places/nuget/Xamarin.Google.iOS.Places.nuspec
+++ b/Google.Places/nuget/Xamarin.Google.iOS.Places.nuspec
@@ -12,8 +12,16 @@
     <projectUrl>https://components.xamarin.com/view/googleiosplaces</projectUrl>
     <licenseUrl>https://components.xamarin.com/license/googleiosplaces</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosplaces_128x128.png</iconUrl>
+    <dependencies>
+      <group targetFramework="Xamarin.iOS10">
+        <dependency id="Xamarin.Build.Download" version="0.4.7" />
+      </group>
+    </dependencies>
   </metadata>
   <files>
     <file src="output/Google.Places.dll" target="lib/Xamarin.iOS10" />
+
+    <!-- Add targets file for external native reference download -->
+    <file src="source/Google.Places/Google.Places.targets" target="build/Xamarin.Google.iOS.Places.targets" />
   </files>
 </package>
