--- a/Firebase.CloudFirestore/source/Firebase.CloudFirestore/Firebase.CloudFirestore.csproj
+++ b/Firebase.CloudFirestore/source/Firebase.CloudFirestore/Firebase.CloudFirestore.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FirebaseCloudFirestore.linkwith.cs" />
     <Compile Include="Loader.cs" />
+    <Compile Include="Extensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
